# gameboy_emulator

./: .gitignore  Cargo.toml  LICENSE  README.md  todo.md
src/: gameboy.rs  main.rs  screen.rs  utils.rs
src/gameboy/: apu.rs  cartridge.rs  cpu.rs  joypad.rs  memory.rs  ppu.rs  timer.rs
src/gameboy/apu/: driver.rs  noise.rs  pulse.rs  utils.rs  wave.rs
src/gameboy/cartridge/: mbc0.rs  mbc1.rs
src/gameboy/cpu/: instructions.rs
src/gameboy/ppu/: fetcher.rs  fifo.rs  lcdc.rs  palette.rs  sprite.rs  stat.rs  types.rs
