[package]
name = "gameboy_emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.9.1"
wrapping_arithmetic = "0.1.0"
minifb = "0.23.0"
rand = "0.8.5"
colored = "2.0.0"
num-traits = "0.2"
num-derive = "0.3"
lazy_static = "1.4.0"
rodio = "0.16.0"